<resources>
    <string name="title_activity_maps">Hotel Posada Bonita App</string>
    <string name="rooms">Rooms</string>
    <string name="room_management">Gestión
                        Habitaciones</string>
    <string name="spa_management">Gestión
                        Spa</string>
    <string name="pack_management">Gestión
                        Paquetes</string>
    <string name="sales_management">Gestión
                         Ofertas</string>
    <string name="reservations_management">Gestión
                                Reservaciones</string>
    <string name="description_shiatsu">El shiatsu es un masaje terapéutico japonés que, a través de las presiones, estimula las defensas naturales del cuerpo facilitando la autocuración.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_hotel">Hotel Posada Bonita</string>
    <string name="room_reservation">Cuarto reservado</string>
    <string name="slideshow">Slideshow</string>
    <string name="gallery">Galeria</string>
    <string name="take_photo_share">Tomar foto y compartir</string>
    <string name="send">Enviar</string>
    <string name="settings">Ajustes</string>
    <string name="description_room">Habitacion matrimonial de 2 a 4 personas por solo $1100 pesos</string>
    <string name="description_img">Foto panoramica 360° habitación matrimonial</string>

    <string name="description_aromaterapia">Masaje anti-estrés que sirve para relajar el cuerpo, la mente y se acentúa en la zonas del cuello, espalda y cabeza liberando de los estragos de la tensión y las cargas de trabajo. Incluye aromaterapia.</string>
    <string name="description_personalizado">Escojemos productos especialmente para tu necesidad, dependiendo lo que tu piel requiera, limpiando escote, rostro y realizamos un masaje, finalizando así con una mascarilla.</string>
    <string name="description_chocolate">Envoltura corporal de chocolate nutritiva y relajante. Contempla una deliciosa exfoliación y masaje, seguida de una envoltura de chocolate, que se encarga de nutrir tu piel y remoldear tu cuerpo. Para disfrutar de todos los beneficios del chocolate sin ingerir una caloría más. Dale un gusto al cuerpo y combate la celulitis yla tensión de la forma más agradable y eficaz.</string>
    <string name="description_foots">Consiste en utilizar las plantas en baños de esta manera aprovechar sus propiedades tónicas y calmantes para pies cansados y adoloridos, con un exfoliante para eliminar asperezas y estimular el riego sanguineo además de una mascarilla de barro para desinflamar.</string>
    <string name="description_podal">Esrimula las capacidades del propio cuerpo para generar bienestar y mejor funcionamiento de los sitemas que conforman el organismo, corrigiendo los desequilibrios generales en el cuerpo(Relajando los pies, se relaja el cuerpo).</string>
    <string name="description_hotel">Somos un Hotel-Spa, encargado de ofrecerle la mejor de las atenciones a nuestros clientes, con el fin de satisfacer las necesiddades. Ya que son nuestra prioridad, buscamos que obtenga lo mejor del Hotel Posada Bonita.</string>
    <string name="room1">- Doble</string>
    <string name="room2">-Matrimonial</string>
    <string name="choose_img">Elegir Imagen</string>
    <string name="share">COMPARTIR</string>
    <string name="room3">- Quinsay</string>
    <string name="description_hotel_spa">Ven y conocenos, Hotel-Spa Posada Bonita. Te ofrece la mejor atención, visita nuestras instalaciones y te darás cuenta que satisfactorio es hospedarte en el hotel. ¨Conoce Dolores Hidalgo Gto, conoce Hotel-Spa Posada Bonita!!!¨</string>
    <string name="quien_somos">¿Quien somos?</string>
    <string name="profile">Perfil</string>
    <string name="list_offers">Listar</string>
    <string name="sharing_text">Your sharing text goes here…</string>
    <string name="share_title">Share Screenshot</string>
    <string name="screenshot_take_failed">Failed to take screenshot!!</string>
    <string name="wait">Please wait…</string>
    <string name="full_page_screenshot">Full Page Screenshot</string>
    <string name="hidden_text">Hidden Text</string>
    <string name="custom_page_screenshot">Custom Page Screenshot</string>
    <string name="offers_name">Nombre de la oferta</string>
    <string name="numero">Llamar 01 418 182 3999</string>
    <string name="address">Prolongacion Avenida Guanajuato 121 Dolores Hidalgo</string>
    <string name="title_room">Tipo de Habitaciones:</string>
    <string name="massage1">Masaje Antiestrés con Aromaterapia</string>
    <string name="massage2">Fácil Orgánico Personalizado</string>
    <string name="massage3">Tratatamiento Corporal de Chocolate</string>
    <string name="massage4">Tratatamiento Baño para Pies Cansados</string>
    <string name="massage5">Reflexiología Podal</string>
    <string name="temple_order">Templo Tercera Orden</string>
    <string name="name_package">Nombre Paquete</string>
    <string name="price_package">Costo Paquete</string>
    <string name="description_package">Descripción del Paquete</string>
    <string name="choose_image">Elegir Imagen</string>
    <string name="add">Añadir</string>
    <string name="list_package">Listar</string>
    <string name="package_name">Nombre Paquete</string>
    <string name="cost">Costo</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="title_help">Modulo de Ayuda</string>  <string name="text_catalogue_help">*Selecciona en el menú "Habitaciones"\n o "Servicios"\n*Visualiza el catalogo\n*Seleccianar para más información \n*Para reservar, da click sobre el botón \n"Reservar"</string>
    <string name="spa">Spa</string>
    <string name="title_comments">Comentarios de la Aplicación</string>
    <string name="name_comment">Nombre</string>
    <string name="txt_comment">Escribe tu comentario</string>
    <string name="pack">Paquetes</string>
    <string name="sales">Ofertas</string>
    <string name="location">Localización</string>
    <string name="reservations">Reservaciones</string>
    <string name="food">Comida</string>
    <string name="places">Turismo</string>
    <string name="contact">Contacto</string>
    <string name="name_place">Name</string>
    <string name="more">Fotos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_help_nav">Dudas</string>
    <string name="title_2_reservations_help">¿Cómo hacer rervaciones?</string>
    <string name="text_reservation_help">*Selecciona en el menú "Reservaciones" \n*Selecciona tu habitación/servicio \n*Llena los datos de la reservación \n*Descarga tu comprobante de reservación"</string>
    <string name="title_2_cancel_help">¿Cancelar una Reservación?</string>
    <string name="text_cancel_help">*Para cancelar tu reservación llama al \nHotel con una anticipación de 12 hrs\n*Puedes ir directamente al hotel para \ncancelar tu reservación</string>
    <string name="title_maps_nav">Ubicación</string>
    <string name="map_description">Hotel - Spa Posada Bonita</string>
    <string name="error_youtube">Error al inicilizar Youtube</string>

    <!--Strings Login-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Contraseña demasiado corta, ingrese un mínimo de 6 caracteres.</string>
    <string name="auth_failed">¡Error al autentificar!, Por favor verifique su correo electrónico y contraseña o regístrese</string>
    <string name="change_email">Cambiar e-mail</string>
    <string name="change_password">Cambiar password</string>
    <string name="send_password_reset_email">Enviar correo electrónico de restablecimiento de contraseña</string>
    <string name="remove_user">Quitar Usuario</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre completo</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Introduzca su contraseña</string>
    <string name="btn_link_to_register">¿Aun no tiene cuenta?¡registrese ahora mismo!</string>
    <string name="btn_link_to_login">Se ha registrado correctamente. Inicia sesion!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">¿Olvido su contraseña?</string>
    <string name="btn_reset_password">Restablecer la contraseña</string>
    <string name="btn_back"><![CDATA[<< REGRESAR]]></string>
    <string name="hint_new_email">Nuevo correo</string>
    <string name="btn_change">cambiar</string>
    <string name="btn_send">enviar</string>
    <string name="btn_remove">quitar</string>
    <string name="btn_sign_out">Cerrar sesion</string>
    <string name="lbl_forgot_password">¿Olvido su contraseña?</string>
    <string name="forgot_password_msg">Solo necesitamos de su correo electronico con el que se haya registrado, para enviarle las instrucciones de restablecimiento de contraseña.</string>
    <string name="email_id">Email ID</string>
    <!--End String Login-->


</resources>
