<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imv_get"
        android:layout_width="70pt"
        android:layout_height="60pt"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/edt_namepackage"
        android:layout_gravity="center"
        android:layout_marginTop="38dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/edt_namepackage"
        android:layout_width="105pt"
        android:layout_height="25pt"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/package_name"
        android:textSize="20sp"
        android:layout_marginLeft="70pt"
        android:layout_marginTop="10pt"
        android:layout_marginRight="5pt"/>

    <TextView
        android:id="@+id/edt_price"
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:layout_alignStart="@+id/edt_namepackage"
        android:layout_below="@+id/edt_namepackage"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/price_package"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edt_description"
        android:layout_width="100pt"
        android:layout_height="70pt"
        android:layout_alignStart="@+id/edt_price"
        android:layout_below="@+id/edt_price"
        android:gravity="left|center"
        android:padding="10dp"
        android:text="@string/description_package"
        android:textSize="15sp" />

</RelativeLayout>
